--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ font-family: novecento;
 src: url(../font/Novecentowide-Light.otf);
 }
 
-body {background-color:#F9F7E4}
+body {background-color:#fff}
 
 
 
@@ -480,9 +480,28 @@ video {
 }
 
 #testa {
+    z-index:0;
     position:fixed;
 }
 
 #first-chapter {
     position:relative;
+}
+
+
+.introduction{
+    z-index:1000;
+    
+    font-family: 'Varela Round', sans-serif;
+    padding:1.5em;
+    text-align:center;
+    color:#5B5B5B;
+    letter-spacing:0.2em;
+    line-height:1.5em;
+    font-size:0.95em;
+    
+}
+
+.sand {
+    background-color:#F9F7E4;
 }
