--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 .head {
     height:370px;
-    margin-top:20%;
+    margin-top:17%;
 }
 
 .blue {
@@ -287,4 +287,8 @@ h3 small em{font-style:normal; color:#3A3A3A}
 .sticky {
     z-index:2200;
 
+}
+
+.header-intro {
+    height:100%
 }
